# dataox-elevator-test

./: .gitignore  README.md  pyproject.toml  run.sh  setup.cfg
samples/: main_v1.py  main_v2.py
src/: elevator.py  main.py  passenger.py
